--- a/.eslintrc
+++ b/.eslintrc
@@ -29,11 +29,12 @@
   },
   "plugins": ["react", "import", "jsx-a11y"],
   "rules": {
-    "react/prop-types": "off",
-    "react/jsx-uses-react": "off",
     "react/react-in-jsx-scope": "off",
-    "react/self-closing-comp": "warn",
-    "no-unused-vars": "off",
+    "react-hooks/rules-of-hooks": "error",
+    "react-hooks/exhaustive-deps": "warn",
+    "react/prop-types": "off",
+    "@typescript-eslint/explicit-module-boundary-types": "off",
+    "@typescript-eslint/no-non-null-assertion": "off",
     "import/no-unresolved": "off"
   }
 }
